--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -937,9 +937,13 @@ C0_pop <- Ct + beta_pop * t
 gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), gamma_shape, gamma_rate)
 C0_gamma <- Ct + gamma_quantiles * t
 
--   the current empirical (population) based approach, with a binary decision;
+# gamma fitted to males
+m_gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), m_gamma_shape, m_gamma_rate)
+C0_gamma_m <- Ct + m_gamma_quantiles * t
 
--   our suggested Gamma distribution approach, with a probabilistic decision approach, and corresponding confidence interval;
+# gamma fitted to females
+f_gamma_quantiles <- qgamma(c(0.025, 0.5, 0.975), f_gamma_shape, f_gamma_rate)
+C0_gamma_f <- Ct + f_gamma_quantiles * t
 
 # predicted Beta using regression model
 lm_pred_vals <- predict(lm_model, newdata = test_person, interval = "prediction", level = 0.95)
@@ -1007,7 +1011,16 @@ C0_qr_lower <- Ct + mean(beta_q025_qr, na.rm = TRUE) * t
 C0_qr_upper <- Ct + mean(beta_q975_qr, na.rm = TRUE) * t
 C0_qr_mean  <- mean(c(C0_qr_lower, C0_qr_upper))
 
-p_qr <- p_over_limit_sim
+# Approximate P(Co > limit) under QR
+set.seed(123)
+n_sim <- 10000
+# Sample indices and uniform draws between predicted bounds
+idx <- sample(seq_along(beta_q025_qr), size = n_sim, replace = TRUE)
+beta_samples_qr <- runif(n_sim, min = beta_q025_qr[idx], max = beta_q975_qr[idx])
+C0_samples_qr   <- Ct + beta_samples_qr * t
+p_qr <- mean(C0_samples_qr > x_limit, na.rm = TRUE)
+
+# p_qr <- p_over_limit_sim
 
 # plot
 results_df <- tibble(
